test_results/Thu Sep  6 14:07:28 MDT 2018/ElectionBinMut1.sol.txt
Using network 'development'.

Error parsing /home/pchapman/election/contracts/ElectionBinMut1.sol: ParsedContract.sol:39:33: ParserError: Expected primary expression.
        require(_candidateId >= 0_candidateId < candidatesCount);
                                ^
[31mCompilation failed. See above.[39m
